# drone_blackbox

./: LICENCE  README.md
250/naze_guide/: Naze 32 Revision 6 Flight Controller Guide - Guides - DroneTrest.html
DIY-Multiprotocol-TX-Module/Multiprotocol/: Multiprotocol.ino  _Config.h  _upload.sh  multi-avr-....hex
MOJE/CPP/gamepad/: .directory  .gitignore  CMakeLists.txt  gamepad.cpp  main.cpp
QT_LEAP_MOTION/: QtLeapMotion.files  QtLeapMotion.includes
REPO/CPP/gamepad/: main.cpp  (+1 more)
linux/: CMakeLists.txt  HandsListener.cpp  HandsListener.h  Makefile  buttons.h  common.h  compile.sh  database.cpp  database.h  dialogarmingmodesettings.cpp  dialogarmingmodesettings.h  dialogarmingmodesettings.ui  dialogdisarmingmodesettings.cpp  dialogdisarmingmodesettings.h  dialogdisarmingmodesettings.ui  dialogradiosettings.cpp  dialogradiosettings.h  dialogradiosettings.ui  dialogthrottlemodesettings.cpp  dialogthrottlemodesettings.h  dialogthrottlemodesettings.ui  drone.cpp  drone.h  dronemanager.h  dronemodes.h  focuswatcher.h  gamepad.cpp  gamepad.h  include.h  leapeventlistener.cpp  leapeventlistener.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_database.cpp  moc_drone.cpp  moc_mainwindow.cpp  moc_threadarduinoconnect.cpp  moc_threadarduinodetect.cpp  (+62 more)
linux/LeapSDK/: README.txt
linux/LeapSDK/samples/: CMakeLists.txt  CallbackSample.c  GLUTDistortionShaderSample.c  GLUTImageSample.c  GLUTRectifiedImageSample.c  GLUTSample.c  GLutils.c  ImageSample.c  InterpolationSample.c  JSONViewer.html  PollingSample.c  RecordPlaybackSample.c
linux/QtLeapMotion/Leap/samples/: Sample.cpp
linux/QtLeapMotion/Leap/util/: LeapScene.h  LeapUtil.h
linux/QtLeapMotion/QtLeapDevice/: QtLeapMotionController.cpp  QtLeapMotionController.h  QtLeapMotionListener.cpp  QtLeapMotionListener.h
linux/QtLeapMotion/QtLeapGestures/: QtLeapCircleGesture.h  QtLeapGesture.h  QtLeapKeyTapGesture.h  QtLeapScreenTapGesture.h  QtLeapSwipeGesture.h  QtLeapTapGesture.h
linux/QtLeapMotion/QtLeapGestures/Handlers/: DefaultQtLeapCircleGestureHandler.cpp  DefaultQtLeapCircleGestureHandler.h  DefaultQtLeapSwipeGestureHandler.cpp  DefaultQtLeapSwipeGestureHandler.h  DefaultQtLeapTapGestureHandler.cpp  DefaultQtLeapTapGestureHandler.h  QtLeapGestureHandlerInterface.h
linux/QtLeapMotion/QtLeapGestures/Listeners/: QtLeapGestureListenerInterface.h
linux/QtLeapMotion/QtLeapGestures/Qml/: AbstractGestureArea.cpp  AbstractGestureArea.h  CircleLeapGestureArea.h  KeyTapLeapGestureArea.h  ScreenTapLeapGestureArea.h  SwipeLeapGestureArea.h
linux/QtLeapMotion/QtLeapGlobal/: QtLeapBone.h  QtLeapFinger.h  QtLeapHand.cpp  QtLeapHand.h  QtLeapMotionQQuickView.cpp  QtLeapPointable.cpp  QtLeapPointable.h  QtLeapTool.h  QtLeapUtils.h
linux/QtLeapMotion/QtLeapGlobal/Handlers/: DefaultQtLeapHandsHandler.cpp  DefaultQtLeapHandsHandler.h  QtLeapHandsHandlerInterface.h  QtLeapMotionHandler.h
linux/QtLeapMotion/QtLeapGlobal/Listeners/: QtLeapFingersListenerInterface.h  QtLeapHandsListenerInterface.h
linux/QtLeapMotion/QtLeapGlobal/Qml/: FingersMotionArea.cpp  FingersMotionArea.h  HandsMotionArea.cpp  HandsMotionArea.h
linux/QtLeapMotion/QtLeapTouch/Handlers/: DefaultQtLeapMouseHandler.h  DefaultQtLeapTouchHandler.h  QtLeapMouseHandlerInterface.h  QtLeapTouchHandlerInterface.h
linux/tmp/: moc_AbstractGestureArea.cpp  moc_CircleLeapGestureArea.cpp  moc_DefaultQtLeapCircleGestureHandler.cpp  moc_DefaultQtLeapHandsHandler.cpp  moc_DefaultQtLeapMouseHandler.cpp  moc_DefaultQtLeapSwipeGestureHandler.cpp  moc_DefaultQtLeapTapGestureHandler.cpp  moc_DefaultQtLeapTouchHandler.cpp  moc_FingersMotionArea.cpp  moc_HandsListener.cpp  moc_HandsMotionArea.cpp  moc_KeyTapLeapGestureArea.cpp  moc_QtLeapBone.cpp  moc_QtLeapCircleGesture.cpp  moc_QtLeapFinger.cpp  moc_QtLeapHand.cpp  moc_QtLeapKeyTapGesture.cpp  moc_QtLeapMotionController.cpp  moc_QtLeapMotionListener.cpp  moc_QtLeapMotionQQuickView.cpp  moc_QtLeapPointable.cpp  moc_QtLeapScreenTapGesture.cpp  moc_QtLeapSwipeGesture.cpp  moc_QtLeapTapGesture.cpp  moc_QtLeapTool.cpp  moc_ScreenTapLeapGestureArea.cpp  moc_SwipeLeapGestureArea.cpp  moc_database.cpp  moc_dialogdisarmingmodesettings.cpp  moc_dialogthrottlemodesettings.cpp  moc_drone.cpp  moc_focuswatcher.cpp  moc_mainwindow.cpp  moc_mousesteering.cpp  moc_predefs.h  moc_sendingarduino.cpp  moc_sendingregistry.cpp  moc_steering.cpp  moc_steeringgamepad.cpp  moc_steeringinterface.cpp  (+10 more)
(+26 files in other folders)
